trunk/Archive2/0a/97825f14f324af/output
main.cpp:3:21: error: expected nested-name-specifier before ‘A’
     friend typename A;
                     ^
main.cpp:3:21: error: ‘A’ is neither function nor member function; cannot be declared friend
