trunk/Archive2/0a/97825f14f324af/main.cpp
template<class A>
struct B { 
    friend typename A;
};

class C{};

int main(){
    B<C> b1;
}